Swagger docs for Users + Transactions
